# DST

./: .gitignore  furry.py  notebook2.py  notebook3.py  notebook4.py  notebook5.py  notebook6.py  notebook7.py  notebook8.py  pyproject.toml  test02.py
task1/: notebook2_nb.py  t2.py  t3.py  t5.py  t6.py
